# pg_redis

./: .gitignore  404.html  Cargo.toml  Dockerfile  Dockerfile.supabase  LICENSE  README.md  docker-compose.noports.yml  docker-compose.yml  flake.nix  index.html  mise.toml  mkdocs.yml  pg_redis.control  sitemap.xml
.github/workflows/: ci.yml  docs.yml  update-pgrx.yml
benchmarks/: index.html
command-coverage/: index.html
commands/: index.html
configuration/: index.html
development/: index.html
docker/bench/: run_bench.sh
docker/clients/: Dockerfile  package-lock.json  package.json  run_tests.mjs
docker/e2e/: Dockerfile  bench_pubsub.ts  index.test.ts  package.json  run_tests.sh
docker/postgres/: init.sql
docs/: benchmarks.md  command-coverage.md  commands.md  configuration.md  development.md  index.md  installation.md  pubsub.md  storage-modes.md
docs/stylesheets/: supabase.css
examples/caching-layer/: cache.ts  db.ts  docker-compose.yml  index.test.ts  index.ts  init.sql  package.json
examples/lists/: index.ts
examples/set-flags/: index.ts
examples/sets/: index.ts
installation/: index.html
nix/cargo-pgrx/: buildPgrxExtension.nix  default.nix  mkPgrxExtension.nix  versions.json
nix/ext/pg_redis/: default.nix
pubsub/: index.html
search/: search_index.json
sql/: pg_redis--0.0.0.sql  schema.sql
src/: commands.rs  htab.rs  lib.rs  mem.rs  pubsub.rs  resp.rs  worker.rs
storage-modes/: index.html
tests/pg_regress/expected/: setup.out
