[package]
name = "pg_redis"
version = "0.0.0"
edition = "2024"
resolver = "3"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg17"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.18.0"
socket2 = { version = "0.5", features = ["all"] }
subtle = "2"

[dev-dependencies]
pgrx-tests = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
